--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/**
+ * Shadcn/ui 官方主题 pnpm dlx shadcn@2.3.0 init 自动生成
+ */
 @layer base {
+  /*  Shadcn/ui 官方主题*/
+  /* 默认主题 */
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
@@ -29,6 +35,7 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem
   }
+  /* dark主题 */
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
